# social-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
agents/: __init__.py  linkedin.py  market.py  research.py  whatsapp.py  x.py
data/: data.txt  user_profile.example.txt  user_requests.example.txt
schedulers/: linkedin_scheduler.py  market_scheduler.py  x_scheduler.py
tests/: conftest.py  test_linkedin.py  test_market.py  test_market_scheduler.py  test_whatsapp.py  test_x.py
